# krunner-rs

./: Cargo.toml  README.md  default.nix  flake.nix  justfile  plasma-runner-krunner_nix.desktop
derive/: Cargo.toml
derive/src/: lib.rs
examples/: simple.rs
src/: async.rs  lib.rs  main.rs  sync.rs  types.rs
src/docs/runner/: action.md  config.md  err.md  matches.md  run.md  runner.md  teardown.md
src/docs/runnerext/: register.md
