[package]
name = "krunner"
version = "0.1.0"
edition = "2021"
authors = ["Leah Amelia Chen <hi@pluie.me>"]
description = "Write KRunner plugins in Rust via D-Bus."
repository = "https://github.com/pluiedev/krunner"
license = "MIT OR Apache-2.0"

[features]
tokio = ["dep:async-trait", "dep:dbus-tokio", "dep:tokio"]

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"

# tokio
async-trait = { version = "0.1.73", optional = true }
dbus-tokio = { version = "0.7.6", optional = true }
tokio = { version = "1.32.0", features = ["sync"], optional = true }
