[package]
name = "krunner"
version = "0.1.1"
edition = "2021"
authors = ["Leah Amelia Chen <hi@pluie.me>"]
description = "A crate for writing KRunner plugins in Rust, easily."
repository = "https://github.com/pluiedev/krunner"
license = "MIT OR Apache-2.0"
keywords = ["krunner", "dbus"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs"]

[features]
tokio = ["dep:async-trait", "dep:dbus-tokio", "dep:tokio"]
derive = ["dep:krunner-derive"]

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"

# tokio
async-trait = { version = "0.1.73", optional = true }
dbus-tokio = { version = "0.7.6", optional = true }
tokio = { version = "1.32.0", features = ["rt", "sync"], optional = true }

# derive
krunner-derive = { version = "0.1.0", optional = true }

[workspace]
members = ["derive"]
